[gd_scene load_steps=2 format=3 uid="uid://doii7obpkkf2m"]

[ext_resource type="Script" uid="uid://dolwfaoshyiob" path="res://Scripts/ChapterSelectionUI.gd" id="1_76srk"]

[node name="ChapterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76srk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="BackgroundPattern" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.3)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer/Header"]
layout_mode = 2
alignment = 1

[node name="AdventureIcon" type="Label" parent="MainContainer/Header/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "üó°Ô∏è"

[node name="TitleLabel" type="Label" parent="MainContainer/Header/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = " Adventure Mode"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MainContainer/Header"]
modulate = Color(0.8, 0.8, 0.9, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Choose your chapter and embark on an epic journey"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ChapterListHeader" type="HBoxContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="ChaptersTitle" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ChapterListHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üìö Chapters"

[node name="ProgressIndicator" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ChapterListHeader"]
modulate = Color(0.7, 0.9, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Progress: 0/3"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(380, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="ChapterList" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterCard1" type="Button" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList"]
custom_minimum_size = Vector2(360, 100)
layout_mode = 2

[node name="ChapterCard1BG" type="ColorRect" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.3, 1)

[node name="ChapterCard1Content" type="HBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterIcon1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üå≤"

[node name="ChapterInfo1" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterName1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterInfo1"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Forest of Beginnings"

[node name="ChapterDesc1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterInfo1"]
modulate = Color(0.8, 0.8, 0.9, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "A peaceful forest where adventures begin"

[node name="ChapterProgress1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterInfo1"]
modulate = Color(0.7, 0.9, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Progress: 0/10 stages"

[node name="ChapterStatus1" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content"]
layout_mode = 2

[node name="PowerReq1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterStatus1"]
modulate = Color(1, 0.8, 0.4, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Power: 500+"
horizontal_alignment = 1

[node name="Stars1" type="HBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterStatus1"]
layout_mode = 2

[node name="Star1_1" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterStatus1/Stars1"]
layout_mode = 2
text = "‚≠ê"

[node name="Star1_2" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterStatus1/Stars1"]
layout_mode = 2
text = "‚≠ê"

[node name="Star1_3" type="Label" parent="MainContainer/ContentContainer/LeftPanel/ScrollContainer/ChapterList/ChapterCard1/ChapterCard1Content/ChapterStatus1/Stars1"]
layout_mode = 2
text = "‚≠ê"

[node name="Separator2" type="VSeparator" parent="MainContainer/ContentContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterDetailHeader" type="VBoxContainer" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2

[node name="DetailTitle" type="Label" parent="MainContainer/ContentContainer/RightPanel/ChapterDetailHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üìñ Chapter Details"

[node name="ChapterInfo" type="RichTextLabel" parent="MainContainer/ContentContainer/RightPanel/ChapterDetailHeader"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
bbcode_enabled = true
text = "[center][color=lightblue]Select a chapter to view details and stages[/color][/center]

[b]Chapter Features:[/b]
‚Ä¢ Multiple challenging stages
‚Ä¢ Unique enemies and bosses
‚Ä¢ Valuable rewards and loot
‚Ä¢ Star rating system"
fit_content = true

[node name="Separator3" type="HSeparator" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2

[node name="StagesSection" type="VBoxContainer" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StagesHeader" type="HBoxContainer" parent="MainContainer/ContentContainer/RightPanel/StagesSection"]
layout_mode = 2

[node name="StagesTitle" type="Label" parent="MainContainer/ContentContainer/RightPanel/StagesSection/StagesHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "‚öîÔ∏è Stages"

[node name="StageCounter" type="Label" parent="MainContainer/ContentContainer/RightPanel/StagesSection/StagesHeader"]
modulate = Color(0.8, 0.8, 0.9, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0/0 completed"
horizontal_alignment = 2

[node name="StagesScrollContainer" type="ScrollContainer" parent="MainContainer/ContentContainer/RightPanel/StagesSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="StagesList" type="VBoxContainer" parent="MainContainer/ContentContainer/RightPanel/StagesSection/StagesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator4" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="BottomPanel" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MainContainer/BottomPanel"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚Üê Back to Main"

[node name="Spacer" type="Control" parent="MainContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerStatusContainer" type="VBoxContainer" parent="MainContainer/BottomPanel"]
layout_mode = 2

[node name="TeamPowerLabel" type="Label" parent="MainContainer/BottomPanel/PlayerStatusContainer"]
modulate = Color(0.9, 0.9, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Team Power: 0"
horizontal_alignment = 2

[node name="EnergyLabel" type="Label" parent="MainContainer/BottomPanel/PlayerStatusContainer"]
modulate = Color(0.7, 1, 0.7, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Energy: 100/100"
horizontal_alignment = 2
